cleanup wip |  big mess | v0.2.5

--- a/scss/colors/_index.scss
+++ b/scss/colors/_index.scss
@@ -1,6 +1,8 @@
 // B&W
-$black: #000;
-$white: #fff;
-$lime: hsl(100, 5%, 10%); // lime !!;
+$black: rgba(0, 0, 0, 0.912);
+$white: rgba(255, 255, 255, 0.927);
+// $limeOKLCH: oklch(77.81% 0.261 145.69); //
+$lime: rgba(0, 219, 69, 0.5);
+// $limeRGB: rgb(0, 220, 70);
 
-$colors: (hsl(100, 0%, 0%)); // lime !!;
+$colors: rgba(131, 131, 131, 0);
