--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -50,8 +50,7 @@
 
       > header,
       > footer {
-        padding: calc(var(#{$✨}spacing) * 0.5)
-          var(#{$✨}block-spacing-horizontal);
+        padding: calc(var(#{$✨}spacing) * 0.5) var(#{$✨}block-spacing);
       }
 
       > header {
