--- a/scss/forms/_input-file.scss
+++ b/scss/forms/_input-file.scss
@@ -11,7 +11,7 @@
   [type="file"] {
     #{$✨}color: var(#{$✨}muted-color);
     margin-left: calc(var(#{$✨}outline-width) * -1); // 1
-    padding: calc(var(#{$✨}form-element-spacing-vertical) * 0.5) 0;
+    padding: calc(var(#{$✨}spacing) * 0.5) 0;
     padding-left: var(#{$✨}outline-width); // 1
     border: 0;
     border-radius: 0;
@@ -19,8 +19,7 @@
 
     &::file-selector-button {
       margin-right: calc(var(#{$✨}spacing) / 2);
-      padding: calc(var(#{$✨}form-element-spacing-vertical) * 0.5)
-        var(#{$✨}form-element-spacing-horizontal);
+      padding: calc(var(#{$✨}spacing) * 0.5) var(#{$✨}spacing);
     }
 
     &:is(:hover, :active, :focus) {
