--- a/scss/themes/default/_styles.scss
+++ b/scss/themes/default/_styles.scss
@@ -46,7 +46,7 @@
 
     // Spacings for typography elements
     // @if map.get($modules, "components/typography") {
-    //   #{$✨}spacing-vertical: 1rem;
+    //   #{$✨}spacing: 1rem;
     // }
 
     // Spacings for body > header, body > main, body > footer, section, article
@@ -55,8 +55,8 @@
       map.get($modules, "components/card") or
       map.get($modules, "components/modal")
     {
-      #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * 2);
-      #{$✨}block-spacing-horizontal: var(#{$✨}spacing);
+      #{$✨}spacing: calc(var(#{$✨}spacing) * 2);
+      #{$✨}block-spacing: var(#{$✨}spacing);
     }
 
     @if map.get($modules, "layout/grid") and $enable-classes {
@@ -68,8 +68,8 @@
     @if map.get($modules, "components/button") or
       map.get($modules, "forms/basic")
     {
-      #{$✨}form-element-spacing-vertical: 0.75rem;
-      #{$✨}form-element-spacing-horizontal: 1rem;
+      #{$✨}spacing: 0.75rem;
+      #{$✨}spacing: 1rem;
     }
 
     // Font weight for form labels & fieldsets legend
@@ -99,10 +99,10 @@
 
     // // Spacings for nav component
     // @if map.get($modules, "components/nav") {
-    //   #{$✨}nav-element-spacing-vertical: 1rem;
-    //   #{$✨}nav-element-spacing-horizontal: 0.5rem;
-    //   #{$✨}nav-link-spacing-vertical: 0.5rem;
-    //   #{$✨}nav-link-spacing-horizontal: 0.5rem;
+    //   #{$✨}spacing: 1rem;
+    //   #{$✨}spacing: 0.5rem;
+    //   #{$✨}spacing: 0.5rem;
+    //   #{$✨}nav-link-spacing: 0.5rem;
     //   #{$✨}nav-breadcrumb-divider: ">";
     // }
 
@@ -128,12 +128,14 @@
       details {
         summary {
           $selector: '&[role="button"]';
+
           @if $enable-classes {
             $selector: "#{$selector}:not(.outline)";
           }
+
           #{$selector} {
             &::after {
-              filter: brightness(0) invert(1);
+              filter: brightness(10) invert(1);
             }
           }
         }
@@ -164,9 +166,11 @@
       // Change the icon color to white for buttons
       [aria-busy="true"]:not(input, select, textarea) {
         $selector: '&:is(button, [type="submit"], [type="button"], [type="reset"], [role="button"])';
+
         @if $enable-classes {
           $selector: "#{$selector}:not(.outline)";
         }
+
         #{$selector} {
           &::before {
             filter: brightness(0) invert(1);
@@ -190,19 +194,20 @@
           @if $values {
             @media (min-width: map.get($values, "breakpoint")) {
               $multiplier: 2;
-              @if $key == "sm" {
+
+              @if $key== "sm" {
                 $multiplier: 2.5;
-              } @else if $key == "md" {
+              } @else if $key== "md" {
                 $multiplier: 3;
-              } @else if $key == "lg" {
+              } @else if $key== "lg" {
                 $multiplier: 3.5;
-              } @else if $key == "xl" {
+              } @else if $key== "xl" {
                 $multiplier: 4;
-              } @else if $key == "xxl" {
+              } @else if $key== "xxl" {
                 $multiplier: 4.5;
               }
 
-              #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * $multiplier);
+              #{$✨}spacing: calc(var(#{$✨}spacing) * $multiplier);
             }
           }
         }
@@ -216,21 +221,20 @@
           @if $values {
             @media (min-width: map.get($values, "breakpoint")) {
               $multiplier: 1;
-              @if $key == "sm" {
+
+              @if $key== "sm" {
                 $multiplier: 1.25;
-              } @else if $key == "md" {
+              } @else if $key== "md" {
                 $multiplier: 1.5;
-              } @else if $key == "lg" {
+              } @else if $key== "lg" {
                 $multiplier: 1.75;
-              } @else if $key == "xl" {
+              } @else if $key== "xl" {
                 $multiplier: 2;
-              } @else if $key == "xxl" {
+              } @else if $key== "xxl" {
                 $multiplier: 2.25;
               }
 
-              #{$✨}block-spacing-horizontal: calc(
-                var(#{$✨}spacing) * $multiplier
-              );
+              #{$✨}block-spacing: calc(var(#{$✨}spacing) * $multiplier);
             }
           }
         }
@@ -240,20 +244,20 @@
     // Modal
     @if map.get($modules, "components/modal") {
       dialog > article {
-        #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * 2);
-        #{$✨}block-spacing-horizontal: var(#{$✨}spacing);
+        #{$✨}spacing: calc(var(#{$✨}spacing) * 2);
+        #{$✨}block-spacing: var(#{$✨}spacing);
 
         @if map.get($breakpoints, "sm") {
           @media (min-width: map.get(map.get($breakpoints, "sm"), "breakpoint")) {
-            #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * 2.5);
-            #{$✨}block-spacing-horizontal: calc(var(#{$✨}spacing) * 1.25);
+            #{$✨}spacing: calc(var(#{$✨}spacing) * 2.5);
+            #{$✨}block-spacing: calc(var(#{$✨}spacing) * 1.25);
           }
         }
 
         @if map.get($breakpoints, "md") {
           @media (min-width: map.get(map.get($breakpoints, "md"), "breakpoint")) {
-            #{$✨}spacing-vertical: calc(var(#{$✨}spacing) * 3);
-            #{$✨}block-spacing-horizontal: calc(var(#{$✨}spacing) * 1.5);
+            #{$✨}spacing: calc(var(#{$✨}spacing) * 3);
+            #{$✨}block-spacing: calc(var(#{$✨}spacing) * 1.5);
           }
         }
       }
@@ -390,6 +394,7 @@
         #{$✨}outline-width: 0.0625rem;
       }
     }
+
     nav {
       details.dropdown {
         summary:focus-visible {
@@ -439,7 +444,7 @@
       [type="submit"],
       [type="button"],
       [role="button"] {
-        #{$✨}form-element-spacing-horizontal: 2rem;
+        #{$✨}spacing: 2rem;
       }
     }
   }
