--- a/src/scss/utils/_copyright.scss
+++ b/src/scss/utils/_copyright.scss
@@ -1,8 +1,9 @@
 /*!
- * FIKO 🐸 v0.0.5 (https://fiko.rokma.rocks)
- * Customisable Black & White default
- * Inspired by Pico | MIT License | https://github.com/picocss/pico
- * Copyright 2023 Rokma - Licensed under MIT
+ * FIKO 🐸 v0.3.7 (https://fiko.rokma.rocks)
+ * Easy to customise BLACK & WHITE CSS LIBRARY
+ * MIT License | https: //github.com/toybreaker/fiko
+ * Inspired by Pico | https://github.com/picocss/pico
+ * Copyright 2023 Toybreaker - Licensed under MIT
  */
 
 
