--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -43,7 +43,7 @@
     }
 
     li {
-      display: inline-block;
+      //display: inline-block;
       margin : 0;
       padding: var(#{$✨}spacing) var(#{$✨}spacing);
 
