--- a/src/scss/components/_progress.scss
+++ b/src/scss/components/_progress.scss
@@ -1,5 +1,5 @@
 @use "sass:map";
-@use "../settings" as *;
+@use "../settings"as *;
 
 @if map.get($modules, "components/progress") {
   /**
@@ -7,14 +7,16 @@
    */
 
   // Reboot based on :
-  // - normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css
-  // - sanitize.css v13.0.0 | CC0 1.0 Universal | github.com/csstools/sanitize.css
+  // - normalize.css v8.0.1 | MIT License |
+  //   github.com/necolas/normalize.css
+  // - sanitize.css v13.0.0 | CC0 1.0 Universal |
+  //   github.com/csstools/sanitize.css
   // ––––––––––––––––––––
 
   // 1. Add the correct display in Edge 18- and IE
   // 2. Add the correct vertical alignment in Chrome, Edge, and Firefox
   progress {
-    display: inline-block; // 1
+    display       : inline-block; // 1
     vertical-align: baseline; // 2
   }
 
@@ -24,19 +26,19 @@
   progress {
     // Reset the default appearance
     -webkit-appearance: none;
-    -moz-appearance: none;
+    -moz-appearance   : none;
 
     // Styles
-    display: inline-block;
-    appearance: none;
-    width: 100%;
-    height: 0.5rem;
+    display      : inline-block;
+    appearance   : none;
+    width        : 100%;
+    height       : 0.5rem;
     margin-bottom: calc(var(#{$✨}spacing) * 0.5);
-    overflow: hidden;
+    overflow     : hidden;
 
     // Remove Firefox and Opera border
-    border: 0;
-    border-radius: var(#{$✨}border-radius);
+    border          : 0;
+    border-radius   : var(#{$✨}border-radius);
     background-color: var(#{$✨}progress-background-color);
 
     // IE10 uses `color` to set the bar background-color
@@ -44,7 +46,7 @@
 
     &::-webkit-progress-bar {
       border-radius: var(#{$✨}border-radius);
-      background: none;
+      background   : none;
     }
 
     &[value]::-webkit-progress-value {
@@ -62,13 +64,9 @@
     // Indeterminate state
     @media (prefers-reduced-motion: no-preference) {
       &:indeterminate {
-        background: var(#{$✨}progress-background-color)
-          linear-gradient(
-            to right,
-            var(#{$✨}progress-color) 30%,
-            var(#{$✨}progress-background-color) 30%
-          )
-          top left / 150% 150% no-repeat;
+        background: var(#{$✨}progress-background-color) linear-gradient(to right,
+          var(#{$✨}progress-color) 30%,
+          var(#{$✨}progress-background-color) 30%) top left / 150% 150% no-repeat;
         animation: progress-indeterminate 1s linear infinite;
 
         &[value]::-webkit-progress-value {
