--- a/src/scss/themes/default/_styles.scss
+++ b/src/scss/themes/default/_styles.scss
@@ -1,6 +1,6 @@
 @use "sass:map";
-@use "../../colors" as *;
-@use "../../settings" as *;
+@use "../../colors"as *;
+@use "../../settings"as *;
 @use "../../utils/functions";
 
 @if map.get($modules, "themes/default") {
@@ -12,19 +12,32 @@
     // Typography
     #{$✨}font-family-emoji: "Apple Color Emoji", "Segoe UI Emoji",
       "Segoe UI Symbol", "Noto Color Emoji";
-    #{$✨}font-family-sans-serif: system-ui, "Segoe UI", Roboto, Helvetica,
-      Arial, sans-serif, var(#{$✨}font-family-emoji);
-    #{$✨}font-family-monospace: ui-monospace, SFMono-Regular, "SF Mono", Menlo,
-      Consolas, "Liberation Mono", monospace, var(#{$✨}font-family-emoji);
-    #{$✨}font-family: var(#{$✨}font-family-sans-serif);
-    #{$✨}line-height: 1.35;
-    #{$✨}font-weight: 500;
-    #{$✨}font-size: 100%;
+    #{$✨}font-family-sans-serif: system-ui,
+    "Segoe UI",
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif,
+    var(#{$✨}font-family-emoji);
+    #{$✨}font-family-monospace: ui-monospace,
+    SFMono-Regular,
+    "SF Mono",
+    Menlo,
+    Consolas,
+    "Liberation Mono",
+    monospace,
+    var(#{$✨}font-family-emoji);
+    #{$✨}font-family          : var(#{$✨}font-family-sans-serif);
+    #{$✨}line-height          : 1.35;
+    #{$✨}font-weight          : 500;
+    #{$✨}font-size            : 100%;
     #{$✨}text-underline-offset: 0.2rem;
 
     // Responsive root font size
     @if $enable-responsive-typography {
-      @each $key, $values in $breakpoints {
+
+      @each $key,
+      $values in $breakpoints {
         @if $values {
           @media (min-width: map.get($values, "breakpoint")) {
             #{$✨}font-size: map.get($values, "root-font-size");
@@ -35,39 +48,30 @@
 
     // Borders
     #{$✨}border-radius: 0.25rem;
-    #{$✨}border-width: 0.0625rem;
+    #{$✨}border-width : 0.0625rem;
     #{$✨}outline-width: 0.1875rem;
 
     // Transitions
     #{$✨}transition: 0.3s ease-in-out;
 
-    // Spacings
-    #{$✨}spacing: 1rem;
-
     // Spacings for typography elements
-    // @if map.get($modules, "components/typography") {
-    //   #{$✨}spacing: 1rem;
-    // }
+    @if map.get($modules, "components/typography") {
+      #{$✨}spacing: 1rem;
+    }
 
     // Spacings for body > header, body > main, body > footer, section, article
-    @if map.get($modules, "layout/landmarks") or
-      map.get($modules, "layout/section") or
-      map.get($modules, "components/card") or
-      map.get($modules, "components/modal")
-    {
-      #{$✨}spacing: calc(var(#{$✨}spacing) * 2);
+    @if map.get($modules, "layout/landmarks") or map.get($modules, "layout/section") or map.get($modules, "components/card") or map.get($modules, "components/modal") {
+      #{$✨}spacing      : calc(var(#{$✨}spacing) * 2);
       #{$✨}block-spacing: var(#{$✨}spacing);
     }
 
     @if map.get($modules, "layout/grid") and $enable-classes {
       #{$✨}grid-column-gap: var(#{$✨}spacing);
-      #{$✨}grid-row-gap: var(#{$✨}spacing);
+      #{$✨}grid-row-gap   : var(#{$✨}spacing);
     }
 
     // Spacings for form elements and button
-    @if map.get($modules, "components/button") or
-      map.get($modules, "forms/basic")
-    {
+    @if map.get($modules, "components/button") or map.get($modules, "forms/basic") {
       #{$✨}spacing: 0.75rem;
       #{$✨}spacing: 1rem;
     }
@@ -79,17 +83,9 @@
 
     // Group (role="group")
     @if map.get($modules, "components/group") {
-      #{$✨}group-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
-      #{$✨}group-box-shadow-focus-with-button: 0
-        0
-        0
-        var(#{$✨}outline-width)
-        var(#{$✨}primary-focus);
-      #{$✨}group-box-shadow-focus-with-input: 0
-        0
-        0
-        0.0625rem
-        var(#{$✨}form-element-border-color);
+      #{$✨}group-box-shadow                  : 0 0 0 rgba(0, 0, 0, 0);
+      #{$✨}group-box-shadow-focus-with-button: 0 0 0 var(#{$✨}outline-width) var(#{$✨}primary-focus);
+      #{$✨}group-box-shadow-focus-with-input : 0 0 0 0.0625rem var(#{$✨}form-element-border-color);
     }
 
     // Modal (<dialog>)
@@ -98,33 +94,28 @@
     }
 
     // // Spacings for nav component
-    // @if map.get($modules, "components/nav") {
-    //   #{$✨}spacing: 1rem;
-    //   #{$✨}spacing: 0.5rem;
-    //   #{$✨}spacing: 0.5rem;
-    //   #{$✨}nav-link-spacing: 0.5rem;
-    //   #{$✨}nav-breadcrumb-divider: ">";
-    // }
+    @if map.get($modules, "components/nav") {
+      #{$✨}spacing               : 1rem;
+      #{$✨}spacing               : 0.5rem;
+      #{$✨}spacing               : 0.5rem;
+      #{$✨}nav-link-spacing      : 0.5rem;
+      #{$✨}nav-breadcrumb-divider: ">";
+    }
 
     // Checkboxes icons
     @if map.get($modules, "forms/checkbox-radio-switch") {
       #{$✨}icon-checkbox: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='20 6 9 17 4 12'%3E%3C/polyline%3E%3C/svg%3E");
-      #{$✨}icon-minus: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='5' y1='12' x2='19' y2='12'%3E%3C/line%3E%3C/svg%3E");
+      #{$✨}icon-minus   : url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='4' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='5' y1='12' x2='19' y2='12'%3E%3C/line%3E%3C/svg%3E");
     }
 
     // Chevron icons
-    @if map.get($modules, "forms/basics") or
-      map.get($modules, "components/accordion") or
-      map.get($modules, "components/dropdown")
-    {
+    @if map.get($modules, "forms/basics") or map.get($modules, "components/accordion") or map.get($modules, "components/dropdown") {
       #{$✨}icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
     }
 
     // Chevron icons
     // Change the icon color to white for accordion and dropdown buttons
-    @if map.get($modules, "components/accordion") or
-      map.get($modules, "components/dropdown")
-    {
+    @if map.get($modules, "components/accordion") or map.get($modules, "components/dropdown") {
       details {
         summary {
           $selector: '&[role="button"]';
@@ -182,28 +173,38 @@
 
   // Responsives spacings
   @if $enable-responsive-spacings {
+
     // Landmarks and section
-    @if map.get($modules, "layout/landmarks") or
-      map.get($modules, "layout/section")
-    {
-      #{$semantic-root-element} > header,
-      #{$semantic-root-element} > main,
-      #{$semantic-root-element} > footer,
+    @if map.get($modules, "layout/landmarks") or map.get($modules, "layout/section") {
+
+      #{$semantic-root-element}>header,
+      #{$semantic-root-element}>main,
+      #{$semantic-root-element}>footer,
       section {
-        @each $key, $values in $breakpoints {
+
+        @each $key,
+        $values in $breakpoints {
           @if $values {
             @media (min-width: map.get($values, "breakpoint")) {
               $multiplier: 2;
 
-              @if $key== "sm" {
+              @if $key=="sm" {
                 $multiplier: 2.5;
-              } @else if $key== "md" {
+              }
+
+              @else if $key=="md" {
                 $multiplier: 3;
-              } @else if $key== "lg" {
+              }
+
+              @else if $key=="lg" {
                 $multiplier: 3.5;
-              } @else if $key== "xl" {
+              }
+
+              @else if $key=="xl" {
                 $multiplier: 4;
-              } @else if $key== "xxl" {
+              }
+
+              @else if $key=="xxl" {
                 $multiplier: 4.5;
               }
 
@@ -217,20 +218,30 @@
     // Card (<article>)
     @if map.get($modules, "components/card") {
       article {
-        @each $key, $values in $breakpoints {
+
+        @each $key,
+        $values in $breakpoints {
           @if $values {
             @media (min-width: map.get($values, "breakpoint")) {
               $multiplier: 1;
 
-              @if $key== "sm" {
+              @if $key=="sm" {
                 $multiplier: 1.25;
-              } @else if $key== "md" {
+              }
+
+              @else if $key=="md" {
                 $multiplier: 1.5;
-              } @else if $key== "lg" {
+              }
+
+              @else if $key=="lg" {
                 $multiplier: 1.75;
-              } @else if $key== "xl" {
+              }
+
+              @else if $key=="xl" {
                 $multiplier: 2;
-              } @else if $key== "xxl" {
+              }
+
+              @else if $key=="xxl" {
                 $multiplier: 2.25;
               }
 
@@ -243,20 +254,20 @@
 
     // Modal
     @if map.get($modules, "components/modal") {
-      dialog > article {
-        #{$✨}spacing: calc(var(#{$✨}spacing) * 2);
+      dialog>article {
+        #{$✨}spacing      : calc(var(#{$✨}spacing) * 2);
         #{$✨}block-spacing: var(#{$✨}spacing);
 
         @if map.get($breakpoints, "sm") {
           @media (min-width: map.get(map.get($breakpoints, "sm"), "breakpoint")) {
-            #{$✨}spacing: calc(var(#{$✨}spacing) * 2.5);
+            #{$✨}spacing      : calc(var(#{$✨}spacing) * 2.5);
             #{$✨}block-spacing: calc(var(#{$✨}spacing) * 1.25);
           }
         }
 
         @if map.get($breakpoints, "md") {
           @media (min-width: map.get(map.get($breakpoints, "md"), "breakpoint")) {
-            #{$✨}spacing: calc(var(#{$✨}spacing) * 3);
+            #{$✨}spacing      : calc(var(#{$✨}spacing) * 3);
             #{$✨}block-spacing: calc(var(#{$✨}spacing) * 1.5);
           }
         }
@@ -271,6 +282,7 @@
 
       // Secondary & Contrast
       @if enable-classes {
+
         &.secondary,
         &.contrast {
           #{$✨}text-decoration: underline;
@@ -281,6 +293,7 @@
 
   // Typography
   @if map.get($modules, "components/typography") {
+
     // Small
     small {
       #{$✨}font-size: 0.875em;
@@ -297,48 +310,50 @@
     }
 
     h1 {
-      #{$✨}font-size: 2.25rem;
-      #{$✨}line-height: 1.25;
+      #{$✨}font-size             : 2.25rem;
+      #{$✨}line-height           : 1.25;
       #{$✨}typography-spacing-top: 3rem;
     }
 
     h2 {
-      #{$✨}font-size: 2rem;
-      #{$✨}line-height: 1.3;
+      #{$✨}font-size             : 2rem;
+      #{$✨}line-height           : 1.3;
       #{$✨}typography-spacing-top: 2.625rem;
     }
 
     h3 {
-      #{$✨}font-size: 1.75rem;
-      #{$✨}line-height: 1.35;
+      #{$✨}font-size             : 1.75rem;
+      #{$✨}line-height           : 1.35;
       #{$✨}typography-spacing-top: 2.25rem;
     }
 
     h4 {
-      #{$✨}font-size: 1.5rem;
-      #{$✨}line-height: 1.4;
+      #{$✨}font-size             : 1.5rem;
+      #{$✨}line-height           : 1.4;
       #{$✨}typography-spacing-top: 1.874rem;
     }
 
     h5 {
-      #{$✨}font-size: 1.25rem;
-      #{$✨}line-height: 1.45;
+      #{$✨}font-size             : 1.25rem;
+      #{$✨}line-height           : 1.45;
       #{$✨}typography-spacing-top: 1.6875rem;
     }
 
     h6 {
-      #{$✨}font-size: 1.125rem;
+      #{$✨}font-size             : 1.125rem;
       #{$✨}typography-spacing-top: 1.5rem;
     }
   }
 
   // Table
   @if map.get($modules, "components/table") {
+
     thead,
     tfoot {
+
       th,
       td {
-        #{$✨}font-weight: 600;
+        #{$✨}font-weight : 600;
         #{$✨}border-width: 0.1875rem;
       }
     }
@@ -346,6 +361,7 @@
 
   // Code
   @if map.get($modules, "components/code") {
+
     pre,
     code,
     kbd,
@@ -359,14 +375,12 @@
   }
 
   // Inputs and Selects
-  input:not(
-      [type="submit"],
-      [type="button"],
-      [type="reset"],
-      [type="checkbox"],
-      [type="radio"],
-      [type="file"]
-    ),
+  input:not([type="submit"],
+    [type="button"],
+    [type="reset"],
+    [type="checkbox"],
+    [type="radio"],
+    [type="file"]),
   :where(select, textarea) {
     #{$✨}outline-width: 0.0625rem;
   }
@@ -377,6 +391,7 @@
 
   // Checkboxes, Radios and Switches
   @if map.get($modules, "forms/checkbox-radio-switch") {
+
     [type="checkbox"],
     [type="radio"] {
       #{$✨}border-width: 0.125rem;
@@ -413,30 +428,19 @@
     [role="search"],
     [role="group"] {
       @if $enable-classes {
-        &:has(
-            button.secondary:focus,
-            [type="submit"].secondary:focus,
-            [type="button"].secondary:focus,
-            [role="button"].secondary:focus
-          ) {
-          #{$✨}group-box-shadow-focus-with-button: 0
-            0
-            0
-            var(#{$✨}outline-width)
-            var(#{$✨}secondary-focus);
+
+        &:has(button.secondary:focus,
+          [type="submit"].secondary:focus,
+          [type="button"].secondary:focus,
+          [role="button"].secondary:focus) {
+          #{$✨}group-box-shadow-focus-with-button: 0 0 0 var(#{$✨}outline-width) var(#{$✨}secondary-focus);
         }
 
-        &:has(
-            button.contrast:focus,
-            [type="submit"].contrast:focus,
-            [type="button"].contrast:focus,
-            [role="button"].contrast:focus
-          ) {
-          #{$✨}group-box-shadow-focus-with-button: 0
-            0
-            0
-            var(#{$✨}outline-width)
-            var(#{$✨}contrast-focus);
+        &:has(button.contrast:focus,
+          [type="submit"].contrast:focus,
+          [type="button"].contrast:focus,
+          [role="button"].contrast:focus) {
+          #{$✨}group-box-shadow-focus-with-button: 0 0 0 var(#{$✨}outline-width) var(#{$✨}contrast-focus);
         }
       }
 
