many fixes| not yet ok | v0.3.9

--- a/src/scss/fiko.fluid.scss
+++ b/src/scss/fiko.fluid.scss
@@ -1,4 +1,6 @@
 // FIKO | FLUID version
-@use "index"with ($enable-semantic-container: true,
+@use "index" with (
+  $enable-semantic-container: true,
   $enable-viewport: false,
-  $enable-classes: false);
+  $enable-classes: false
+);
