--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * FIKO 🐸 v0.5.3 (https://fiko.rokma.rocks)
+ * FIKO 🐸 v0.5.4 (https://fiko.rokma.rocks)
  * 2024 CLASSLESS BLACK & WHITE CSS FRAMEWORK LIBRARY
  * MIT License | https: //github.com/toybreaker/fiko
  * Copyright 2023 Toybreaker - Licensed under MIT
@@ -26,6 +26,10 @@
     font-size: 100%;
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
+
+    >* {
+      font-size: unset;
+    }
   }
 
   ::-webkit-file-upload-button {
@@ -56,9 +60,13 @@
     --light-mode: var(--color-white);
     --dark-mode: var(--color-black);
     --font-size: clamp(20px, 1.25rem, 30px);
-    --paddingLR: 3dvw;
+    --paddingLR: 5dvw;
     --paddingTB: 3dvh;
-    --border-size: 1px;
+    --padding: 1dvh;
+    --border: 1px;
+    --radius: 5px;
+    --space: 1rem;
+    --icon-chevron: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='#{functions.display-rgb($white)}' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
 
     --font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, var(--font-family-emoji);
 
@@ -75,19 +83,27 @@
 
   /* Initial styles assuming light theme */
   body[data-theme="light"] {
+    /* set the logic: */
     --current-bg: var(--light-mode);
     --current-text: var(--color-black);
+    /* use the following: */
     background-color: var(--current-bg);
     color: var(--current-text);
   }
 
   /* When data-theme is set to dark */
   body[data-theme="dark"] {
+    /* set the logic: */
     --current-bg: var(--dark-mode);
     --current-text: var(--color-white);
+    /* use the following: */
     background-color: var(--current-bg);
     color: var(--current-text);
   }
+}
+
+:root {
+  --border-color: var(var(--current-text));
 }
 
 /* ||| Toggle Layer ||| */
@@ -125,32 +141,112 @@
   }
 
   .container {
-    margin-left: calc(var(--paddingLR) * 3);
-    margin-right: calc(var(--paddingLR) * 3);
+    margin-left: calc(var(--paddingLR) * 1.5);
+    margin-right: calc(var(--paddingLR) * 1.5);
   }
 
   img {
     max-width: 100%;
+  }
+
+  aside {
+    /* soon */
   }
 }
 
 /* ||| Contained Elements Layer ||| */
 @layer components {
 
-  /* ... [component styles, unchanged from your last provided version] ... */
+
   /* Accordion */
+
   details {
-    border: var(--border-size) solid var(--text-color);
+    display: block;
+    margin-bottom: var(--space);
+
+    summary {
+      line-height: 1rem;
+      list-style-type: none;
+      cursor: pointer;
+
+      &:not([role]) {
+        color: var(--current-text);
+      }
+
+
+      /* Reset marker */
+      &::-webkit-details-marker {
+        display: none;
+      }
+
+      &::marker {
+        display: none;
+      }
+
+      &::-moz-list-bullet {
+        list-style-type: none;
+      }
+
+      /*  Marker */
+      &::after {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        margin-inline-start: calc(var(--space) * 0.5);
+        float: right;
+        transform: rotate(-90deg);
+        background-image: var(--icon-chevron);
+        background-position: right center;
+        background-size: 1rem auto;
+        background-repeat: no-repeat;
+        content: "";
+      }
+
+      &:focus {
+        outline: none;
+
+        &:not([role]) {
+          color: red;
+        }
+      }
+
+      &:focus-visible {
+        &:not([role]) {
+          outline: var(--border) solid orange;
+          outline-offset: calc(var(--space, 1rem) * 0.5);
+          color: red;
+        }
+      }
+
+      /* Type button */
+      &[role="button"] {
+        width: 100%;
+        text-align: left;
+
+        /* Marker */
+        &::after {
+          height: 1.5ch;
+        }
+      }
+    }
+
+    &[open] {
+      >summary {
+        margin-bottom: var(--space);
+
+        &:not([role]) {
+          &:not(:focus) {
+            color: var(--current-text);
+          }
+        }
+
+        &::after {
+          transform: rotate(0);
+        }
+      }
+    }
   }
 
-  summary {
-    cursor: pointer;
-    padding: var(--paddingTB) var(--paddingLR);
-  }
-
-  details[open] summary::before {
-    content: '-';
-  }
 
   /* Headings, P, Span */
   h1,
@@ -176,8 +272,14 @@
 
   /* Card */
   .card {
-    border: 1px solid var(--text-color);
-    padding: var(--paddingTB) var(--paddingLR);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    >* {
+      text-decoration: none;
+    }
   }
 
   .card img {
@@ -186,6 +288,17 @@
 
   .card button {
     display: block;
-    margin-top: var(--paddingTB) var(--paddingLR);
+    padding: var(--paddingTB) var(--paddingLR);
+    border: var(--border) 1px solid;
+    border-radius: var(--radius);
+    background-color: var(--current-text);
+    color: var(--current-bg);
+    /* before font-size: unset, it went to 13px somehow, gosh  */
+    font-size: unset;
+  }
+
+  .container .card {
+    padding: var(--paddingTB) var(--paddingLR);
+    border: 1px solid var(--current-text);
   }
 }
