--- a/package/fiko.css
+++ b/package/fiko.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * FIKO 🐸 v0.5.5 (https://fiko.rokma.rocks)
+ * FIKO 🐸 v0.5.6 (https://fiko.rokma.rocks)
  * 2024 CLASSLESS BLACK & WHITE CSS FRAMEWORK LIBRARY
  * MIT License | https: //github.com/toybreaker/fiko
  * Copyright 2023 Toybreaker - Licensed under MIT
@@ -64,7 +64,7 @@
     --color: var(--current-text);
     --box-shadow: var(--button-box-shadow, 0 0 0 rgba(0, 0, 0, 0));
     padding: var(--form-element-spacing-vertical) var(--form-element-spacing-horizontal);
-    border: var(--border-width) solid var(--border-color);
+    border: var(--border) solid var(--border-color);
     border-radius: var(--border-radius);
     outline: 0;
     background-color: var(--background-color);
@@ -91,6 +91,7 @@
     --paddingLR: 5dvw;
     --paddingTB: 3dvh;
     --border: 1px;
+    --border-color: var(--current-text);
     --radius: 5px;
     --space: 1rem;
     --transition: 0.2s ease-in-out;
@@ -139,9 +140,9 @@
   }
 }
 
-:root {
+/* :root {
   --border-color: var(--current-text);
-}
+} */
 
 /* ||| Toggle Layer ||| */
 @layer toggle {
@@ -265,16 +266,18 @@
 
 
   /* Accordion (<details>) */
+  summary {
+    line-height: 3;
+    list-style-type: none;
+    cursor: pointer;
+    transition: color var(--transition);
+  }
+
   details {
     display: block;
     margin-bottom: var(--spacing);
+    border-bottom: var(--border) solid var(--current-text);
 
-    summary {
-      line-height: 1rem;
-      list-style-type: none;
-      cursor: pointer;
-      transition: color var(--transition);
-    }
 
     summary:not([role]) {
       color: var(--current-text);
@@ -296,8 +299,8 @@
       display: block;
       width: 1rem;
       height: 1rem;
-      -webkit-margin-start: calc(var(--spacing, 1rem) * 0.5);
-      margin-inline-start: calc(var(--spacing, 1rem) * 0.5);
+      -webkit-margin-start: calc(var(--spacing) * 0.5);
+      margin-inline-start: calc(var(--spacing) * 0.5);
       float: right;
       transform: rotate(-90deg);
       background-image: var(--icon-chevron);
@@ -313,13 +316,13 @@
     }
 
     summary:focus:not([role]) {
-      color: var(--accordion-active-summary-color);
+      color: var(--current-text);
     }
 
     summary:focus-visible:not([role]) {
-      outline: var(--outline-width) solid var(--primary-focus);
-      outline-offset: calc(var(--spacing, 1rem) * 0.5);
-      color: var(--primary);
+      outline: var(-border) solid var(--current-text);
+      outline-offset: calc(var(--spacing) * 0.5);
+      color: var(--current-text);
     }
 
     summary[role=button] {
@@ -328,7 +331,7 @@
     }
 
     summary[role=button]::after {
-      height: calc(1rem * var(--line-height, 1.5));
+      height: calc(1rem * var(--line-height));
     }
 
   }
@@ -370,7 +373,7 @@
   }
 
   /* Card */
-  .card {
+  article {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -381,11 +384,11 @@
     }
   }
 
-  .card img {
+  article img {
     max-width: 100%;
   }
 
-  .card button {
+  article button {
     display: block;
     padding: var(--paddingTB) var(--paddingLR);
     border: var(--border) 1px solid;
@@ -396,7 +399,7 @@
     font-size: unset;
   }
 
-  .container .card {
+  .container article {
     padding: var(--paddingTB) var(--paddingLR);
     border: 1px solid var(--current-text);
   }
